--- a/wp-content/themes/gaia/src/sass/_global.scss
+++ b/wp-content/themes/gaia/src/sass/_global.scss
@@ -4,6 +4,11 @@
   font-family: "Montserrat";
 }
 
+input[type="submit"],
+input[type="Reset"] {
+  -webkit-appearance: none;
+}
+
 .white-menu-items {
   & .header__logo,
   .hamburger {
